--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
                     <groupId>org.xerial</groupId>
                     <artifactId>sqlite-jdbc</artifactId>
                 </dependency>
+                
+                <dependency>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-lang3</artifactId>
+                    <version>3.1</version>
+                        <type>jar</type>
+                </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
